--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-    <title>Flask Blog</title>
-</head>
-<body>
-    <h1>Welcome to my blog</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1>{% block title %} Welcome to my blog {% endblock %}</h1>
+{% endblock %}
