--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,90 @@
-@import url('https://fonts.googleapis.com/css?family=Pixelify+Sans');
+@import url('https://fonts.googleapis.com/css?family=Space+Mono:400,700');
 
-h1 {
-    font-family: 'Pixelify Sans', sans-serif;
-    font-size: 36px;
-    letter-spacing: 1px;
-    font-weight: 600;
-    border: 2px #eee solid;
-    color: black;
+/* global stuff */
+* {
+    font-family: 'Space Mono', sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: #171421;
+    height: 100vh;
+    overflow: hidden;
+    padding: 1rem 20%;
+    margin: 0;
+}
+
+/* navbar & header section */
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar-brand {
+    font-size: 22px;
+    color: #26A269;
+    font-weight: 700;
+}
+
+.nav-link {
+    font-size: 18px;
+    color: #33D17A;
+}
+
+/* hero section */
+
+.hero-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 4rem 0;
+}
+
+.hero-header {
+    font-size: 42px;
+    font-weight: 700;
+    color: #D0CFCC;
+    margin: 0;
     text-align: center;
-    padding: 10px;
+}
+
+.hero-desc {
+    font-size: 22px;
+    color: #D0CFCC;
+    margin: 0;
+    text-align: center;
+}
+
+/* footer section */
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 0;
+}
+
+.author-credit,
+.social-links {
+    font-size: 18px;
+    color: #E9AD0C;
+}
+
+/* container placeholder */
+
+.container {
+    flex: 1;
 }
