--- a/templates/base.html
+++ b/templates/base.html
@@ -4,19 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-    <title>{% block title %} {% endblock %}</title>
+    <title>TAE</title>
   </head>
   <body>
     <nav class="navbar">
-        <a class="navbar-brand" href="{{ url_for('index')}}">FlaskBlog</a>
+        <a class="navbar-brand" href="{{ url_for('index')}}">&#35;The-Apprentice-Engineer</a>
         <div class="navbar-list">
             <ul class="navbar-nav">
-                <li><a class="nav-link" href="#">About</a></li>
+                <li><a class="nav-link" href="#">&#126;about</a></li>
             </ul>
         </div>
     </nav>
     <div class="container">
         {% block content %} {% endblock %}
     </div>
+    <footer class="footer">
+      <p class="author-credit">author: lachlan cooney</p>
+      <p><a class="social-links" href="https://github.com/lachlan-cooney" target="_blank" rel="noreferrer">&#126;github</a></p>
+    </footer>
   </body>
 </html>
