--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="hero-section">    
-        <h1 class="hero-header">{% block title %} Projects, thoughts, & opinions {% endblock %}</h1>
+        <h1 class="hero-header">{% block title %} Thoughts, projects, & opinions {% endblock %}</h1>
         <p class="hero-desc">{% block paragraph %} written by lachlan - an aspiring software engineer {% endblock %}</p>
     </div>
 {% endblock %}
