--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block title %} TAE {% endblock %}
+{% block content %}    
     <div class="hero-section">    
-        <h1 class="hero-header">{% block title %} Thoughts, projects, & opinions {% endblock %}</h1>
+        <h1 class="hero-header">{% block heading %} Thoughts, projects, & opinions {% endblock %}</h1>
         <p class="hero-desc">{% block paragraph %} written by lachlan - an aspiring software engineer {% endblock %}</p>
     </div>
 {% endblock %}
