--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,6 +83,36 @@ body {
     color: #E9AD0C;
 }
 
+/* posts section */
+
+.posts-section {
+    display: flex;
+    gap: 10%;
+}
+
+.post {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin: 1rem 0;
+}
+
+.post-title,
+.time-stamp {
+    margin: 0;
+}
+
+.post-title {
+    font-size: 24px;
+    font-weight: 900;
+    color: #33C7DE;
+}
+
+.time-stamp {
+    font-size: 18px;
+    color: #D0CFCC;
+}
+
 /* container placeholder */
 
 .container {
