--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 ul {
     list-style-type: none;
 }
@@ -107,7 +111,8 @@ body {
     margin: 0;
 }
 
-.post-title {
+.post-title,
+.post-link {
     font-size: 24px;
     font-weight: 900;
     color: #33C7DE;
