--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} TAE {% endblock %}
+{% block title %} TAE | Home {% endblock %}
 {% block content %}    
     <div class="hero-section">    
         <h1 class="hero-header">{% block heading %} Thoughts, projects, & opinions {% endblock %}</h1>
