--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,7 +63,8 @@ body {
 }
 
 .hero-header,
-.post-title-individual {
+.post-title-individual,
+.about-title {
     font-size: 42px;
     font-weight: 700;
     color: #D0CFCC;
@@ -72,7 +73,8 @@ body {
 }
 
 .hero-desc,
-.post-time-stamp {
+.post-time-stamp,
+.about-subtitle {
     font-size: 22px;
     color: #D0CFCC;
     margin: 0;
@@ -142,6 +144,26 @@ body {
 .post-time-stamp {
     padding-bottom: 15px;
 }
+
+/* about page */
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 4rem 0;  
+}
+
+.about-desc {
+    font-size: 18px;
+    color: #D0CFCC;
+    text-align: center;
+}
+
+.about-subtitle {
+    padding-bottom: 15px;
+}
+
 
 /* container placeholder */
 
