--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Space+Mono:400,700');
 
+
 /* global stuff */
 * {
     font-family: 'Space Mono', sans-serif;
@@ -32,35 +33,8 @@ body {
     margin: 0;
 }
 
-/* navbar & header section */
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.navbar-brand {
-    font-size: 22px;
-    color: #26A269;
-    font-weight: 700;
-}
-
-.nav-link {
-    font-size: 18px;
-    color: #33D17A;
-}
-
-/* hero section */
-
-.hero-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 4rem 0;
-}
+/* multiple classes */
 
 .hero-header,
 .post-title-individual,
@@ -81,6 +55,57 @@ body {
     text-align: center;
 }
 
+.author-credit,
+.social-links {
+    font-size: 18px;
+    color: #E9AD0C;
+}
+
+.post-title,
+.time-stamp {
+    margin: 0;
+}
+
+.post-title,
+.post-link {
+    font-size: 24px;
+    font-weight: 900;
+    color: #33C7DE;
+}
+
+
+/* navbar & header section */
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar-brand {
+    font-size: 22px;
+    color: #26A269;
+    font-weight: 700;
+}
+
+.nav-link {
+    font-size: 18px;
+    color: #33D17A;
+}
+
+
+/* hero section */
+
+.hero-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 4rem 0;
+}
+
+
 /* footer section */
 
 .footer {
@@ -90,11 +115,6 @@ body {
     padding: 2rem 0;
 }
 
-.author-credit,
-.social-links {
-    font-size: 18px;
-    color: #E9AD0C;
-}
 
 /* posts section */
 
@@ -110,22 +130,11 @@ body {
     margin: 1rem 0;
 }
 
-.post-title,
-.time-stamp {
-    margin: 0;
-}
-
-.post-title,
-.post-link {
-    font-size: 24px;
-    font-weight: 900;
-    color: #33C7DE;
-}
-
 .time-stamp {
     font-size: 18px;
     color: #D0CFCC;
 }
+
 
 /* individual posts */
 
@@ -144,6 +153,7 @@ body {
 .post-time-stamp {
     padding-bottom: 15px;
 }
+
 
 /* about page */
 
@@ -170,3 +180,4 @@ body {
 .container {
     flex: 1;
 }
+
