feat: added link to 'about' page in site header

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <a class="navbar-brand" href="{{ url_for('index')}}">&#35;The-Apprentice-Engineer</a>
         <div class="navbar-list">
             <ul class="navbar-nav">
-                <li><a class="nav-link" href="#">&#126;about</a></li>
+                <li><a class="nav-link" href="{{ url_for('about') }}">&#126;about</a></li>
             </ul>
         </div>
     </nav>
