--- a/templates/create.html
+++ b/templates/create.html
@@ -3,19 +3,21 @@
 {% block title %} TAE | Create Post {% endblock %}
 {% block content %}
 <div class="create-container">
-    <h1 class="create-post-title">{% block heading %} Create a New Post {% endblock %}</h1>    
-    <form method = "post">    
-        <div class="form-group">
-            <label for="title" class="form-title">Title</label>
-            <input type="text" name="title" placeholder="Post title" class="form-control" value="{{ request.form['title'] }}"></input>
-        </div>
-        <div class="form-group">
-            <label for="content" class="form-content-title">Content</label>
-            <textarea name="content" placeholder="Post content" class="form-control">{{ request.form['content'] }}</textarea>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn-primary">Submit</button>
-        </div>
-    </form>
+    <h1 class="create-post-title">{% block heading %} Create Post {% endblock %}</h1>    
+    <div class="form-container">
+        <form method = "post" class="form-group">    
+            <div class="form-item">
+                <label for="title" class="form-title">Title</label>
+                <input type="text" name="title" placeholder="Post title" class="form-control-title" value="{{ request.form['title'] }}"></input>
+            </div>
+            <div class="form-item">
+                <label for="content" class="form-content-title">Content</label>
+                <textarea name="content" placeholder="Post content" class="form-control-content">{{ request.form['content'] }}</textarea>
+            </div>
+            <div class="form-item">
+                <button type="submit" class="btn-primary">Submit</button>
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
