feat: created container for alerts

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
         </div>
     </nav>
     <div class="container">
+        {% for message in get_flashed_messages() %}
+            <div class="alert">{{ message }}</div>
+        {% endfor %}
         {% block content %} {% endblock %}
     </div>
     <footer class="footer">
